Galeria con flexbox index

--- a/DisInterfacesWeb/FLEXBOX/index.html
+++ b/DisInterfacesWeb/FLEXBOX/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <ul>
-        <li><a href="CSS/Ejercicios/index.html">Ejercicios con CSS</a></li>
-        <li><a href="FLEXBOX/flexbox.html">Ejercicio con Flexbox</a></li>
+        <li><a href="LandingpageconFlexbox_AlejandroPoloBarranco/Ejercicio1.html">Landing page con flexbox</a></li>
+        <li><a href="galeriaconflexbox_AlejandroPoloBarranco/Ejercicio2.html">Ejercicio con Flexbox</a></li>
     </ul>
 </body>
 </html>
