Galeria con flexbox index2

--- a/DisInterfacesWeb/index.html
+++ b/DisInterfacesWeb/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li><a href="CSS/Ejercicios/index.html">Ejercicios con CSS</a></li>
-        <li><a href="FLEXBOX/flexbox.html">Ejercicio con Flexbox</a></li>
+        <li><a href="FLEXBOX/index.html">Ejercicio con Flexbox</a></li>
     </ul>
 </body>
 </html>
