--- a/DisInterfacesWeb/FLEXBOX/index.html
+++ b/DisInterfacesWeb/FLEXBOX/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li><a href="LandingpageconFlexbox_AlejandroPoloBarranco/Ejercicio1.html">Landing page con flexbox</a></li>
-        <li><a href="galeriaconflexbox_AlejandroPoloBarranco/Ejercicio2.html">Ejercicio con Flexbox</a></li>
+        <li><a href="galeriaconflexbox_AlejandroPoloBarranco/Ejercicio2.html">Galeria de imágenes</a></li>
     </ul>
 </body>
 </html>
