--- a/DesarrolloWebCliente/Tema3/index.html
+++ b/DesarrolloWebCliente/Tema3/index.html
@@ -14,6 +14,7 @@
         <li><a href="T3_R3/index.html">Relación 3</a></li>
         <li><a href="T3_R4/index.html">Relación 4</a></li>
         <li><a href="T3_R5/index.html">Relación 5(Arrows)</a></li>
+        <li><a href="T3_R7/index.html">Relación 7(Objetos)</a></li>
     </ul>
 </body>
 </html>
