--- a/DesarrolloWebCliente/Tema3/index.html
+++ b/DesarrolloWebCliente/Tema3/index.html
@@ -15,6 +15,7 @@
         <li><a href="T3_R4/index.html">Relación 4</a></li>
         <li><a href="T3_R5/index.html">Relación 5(Arrows)</a></li>
         <li><a href="T3_R7/index.html">Relación 7(Objetos)</a></li>
+        <li><a href="T3_R8/index.html">Relación 8(Clases)</a></li>
     </ul>
 </body>
 </html>
