--- a/DisInterfacesWeb/CSS/Ejercicios/Ejercicio12-Menuhorizontalcondesplegables/Ejercicio12.html
+++ b/DisInterfacesWeb/CSS/Ejercicios/Ejercicio12-Menuhorizontalcondesplegables/Ejercicio12.html
@@ -16,7 +16,14 @@
                     <ul>
                         <li>1º ASIR
                             <ul>
-                                <li>ISO</li>
+                                <li>ISO
+                                    <ul>
+                                        <li>LINUX</li>
+                                        <li>AWS</li>
+                                        <li>PYTHON</li>
+                                        <li>WINDOWS SERVER</li>
+                                    </ul>
+                                </li>
                                 <li>REDES</li>
                             </ul>
                         </li>
@@ -35,22 +42,23 @@
                         </li>
                         <li>2ºDAW
                             <ul>
-                                <li>DISEÑO DE INTERFACES WEB</li>
-                                <li>DESARROLLO WEB EN ENTORNO CLIENTE</li>
-                                <li>DESARROLLO WEB EN ENTORNO SERVIDOR</li>
-                                <li>DESPLIEGE</li>
-                                <li>EMPRESA E INICIATIVA EMPRESARIAL</li>
+                                <li>DISEÑO DE INTERFACES WEB2</li>
+                                <li>DESARROLLO WEB EN ENTORNO CLIENTE2</li>
+                                <li>DESARROLLO WEB EN ENTORNO SERVIDOR2</li>
+                                <li>DESPLIEGE2</li>
+                                <li>EMPRESA E INICIATIVA EMPRESARIAL2</li>
                             </ul>
                         </li>
                     </ul>
                 </li>
             </ul>
         </nav>
+        <img src="360_F_635353838_VXr4g06iTbtPuJFsPbBJdhv5OEQb2dQW.jpg" alt="logo">
     </header>
     <main>
         <section>
             <h2>¡Inscribete en nuestros ciclos!</h2>
-            <p>Obten un 20% de descuento en tu primer curso</p>
+            <p>Obten un 20% de descuento en tu primer curso</p><br>
             <a href="#">Matricúlate Ahora</a>
         </section>
     </main>
