--- a/DesarrolloWebCliente/Tema5/T5_R1_Doom/index.html
+++ b/DesarrolloWebCliente/Tema5/T5_R1_Doom/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="Tema1/index.html">Tema 1</a></li>
-        <li><a href="Tema2/index.html">Tema 2</a></li>
-        <li><a href="Tema3/index.html">Tema 3</a></li>
-        <li><a href="Tema5/index.html">Tema 5</a></li>
+        <li><a href="Ejercicio1.html">Ejercicio 1</a></li>
+        <li><a href="Ejercicio2.html">Ejercicio 2</a></li>
+        <li><a href="Ejercicio3.html">Ejercicio 3</a></li>
     </ul>
 </body>
 </html>
