--- a/DisInterfacesWeb/FLEXBOX/index.html
+++ b/DisInterfacesWeb/FLEXBOX/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="LandingpageconFlexbox_AlejandroPoloBarranco/Ejercicio1.html">Landing page con flexbox</a></li>
         <li><a href="galeriaconflexbox_AlejandroPoloBarranco/Ejercicio2.html">Galeria de imágenes</a></li>
+        <li><a href="ProyectoFlexboxPersonal_AlejandroPoloBarranco/index.html">Proyecto Personal Fotografía</a></li>
     </ul>
 </body>
 </html>
