--- a/DesarrolloWebCliente/Tema5/index.html
+++ b/DesarrolloWebCliente/Tema5/index.html
@@ -11,6 +11,7 @@
         <li><a href="T5_R1_Doom/index.html">T5_R1_Doom</a></li>
         <li><a href="T5_R2_Doom/index.html">T5_R2_Doom</a></li>
         <li><a href="T5_R3_Doom/index.html">T5_R3_Doom</a></li>
+        <li><a href="T5_R4_Clase/EjercicioClase.html">Ejercicio en clase Empleados</a></li>
     </ul>
 </body>
 </html>
