--- a/DesarrolloWebCliente/Tema5/T5_R3_Doom/Ejercicio3.html
+++ b/DesarrolloWebCliente/Tema5/T5_R3_Doom/Ejercicio3.html
@@ -70,7 +70,7 @@
         function moverPieza(celda) {
             const celdas = Array.from(document.querySelectorAll(".celda"));
             const indiceCelda = celdas.indexOf(celda);
-            const indiceVacio = celdas.findIndex(c => c.classList.contains("vacio"));
+            const indiceVacio = celdas.findIndex(c => c.style.backgroundImage === "");
 
             // Defino los movimientos validos
             const movimientosValidos = [
@@ -87,11 +87,9 @@
             [celdas[indiceCelda].style.backgroundImage, celdas[indiceVacio].style.backgroundImage] =
                 [celdas[indiceVacio].style.backgroundImage, celdas[indiceCelda].style.backgroundImage];
             // Se cambia el estilo de fondo para que se vea cual es la vacia
-            [celdas[indiceCelda].style.backgroundPosition, celdas[indiceVacio].style.backgroundPosition] =
-                [celdas[indiceVacio].style.backgroundPosition, celdas[indiceCelda].style.backgroundPosition];
+            celdas[indiceCelda].style.backgroundColor = celdas[indiceCelda].style.backgroundImage === "" ? "#bbb" : "#ddd";
+            celdas[indiceVacio].style.backgroundColor = celdas[indiceVacio].style.backgroundImage === "" ? "#bbb" : "#ddd";
 
-            celdas[indiceCelda].classList.toggle("vacio");
-            celdas[indiceVacio].classList.toggle("vacio");
 
             comprobarVictoria();
         }
