Ejercicio Grid clase EJ3

--- a/DisInterfacesWeb/GRIDLAYOUT/index.html
+++ b/DisInterfacesWeb/GRIDLAYOUT/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="CSS/Ejercicios/index.html">Ejercicios con CSS</a></li>
-        <li><a href="FLEXBOX/index.html">Ejercicios con Flexbox</a></li>
-        <li><a href="GRIDLAYOUT/index.html">Ejercicios con Grid</a></li>
+        <li><a href="Ejercicio3_GridLayout-CartaPresentacion/index.html">Ejercicio 3 Carta Presentacion</a></li>
     </ul>
 </body>
 </html>
