--- a/DesarrolloWebCliente/Tema4/T4_R1/Ejercicio3.html
+++ b/DesarrolloWebCliente/Tema4/T4_R1/Ejercicio3.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 3</title>
 </head>
-
-<body>
-
-    <p id="demo"></p>
+<body onload="iniciarCronometro()">
+    <p id="time">Tiempo transcurrido desde la carga: 0 segundos</p>
 
     <script>
-        const bodycompleto = document.querySelector("body");
-        bodycompleto.addEventListener("load", myFunction);
+        function iniciarCronometro() {
+            const startTime = new Date();
+            const timeElement = document.getElementById("time");
 
-        function myFunction() {
-            console.log("carga completa")
+            setInterval(() => {
+                const elapsed = Math.floor((new Date() - startTime) / 1000);
+                timeElement.textContent = `Tiempo transcurrido desde la carga: ${elapsed} segundos`;
+            }, 1000);
         }
     </script>
 </body>
-
 </html>
