--- a/DesarrolloWebCliente/Tema4/index.html
+++ b/DesarrolloWebCliente/Tema4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="">Relación 1</a></li>
+        <li><a href="T4_R1/index.html">Relación 1</a></li>
     </ul>
 </body>
 </html>
