--- a/DisInterfacesWeb/GRIDLAYOUT/Ejercicio4GridLayout-FormularioDeContacto/index.html
+++ b/DisInterfacesWeb/GRIDLAYOUT/Ejercicio4GridLayout-FormularioDeContacto/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Contacto con Grid CSS</title>
+    <title>Formulario de Contacto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="contenedor">
-        <div id="formulario">
+    <div class="container">
+        <div class="formulario">
             <h1>Nos mantenemos en contacto</h1>
             <form>
                 <input type="text" placeholder="Ingresa tu nombre" required>
@@ -17,7 +17,8 @@
                 <button type="submit">Enviar ahora</button>
             </form>
         </div>
-        <div id="ilustracion">
+        <div class="ilustracion">
+            <!-- Usa tu archivo SVG aquí -->
             <img src="illustration.svg" alt="Ilustración de contacto">
         </div>
     </div>
