--- a/DesarrolloWebCliente/index.html
+++ b/DesarrolloWebCliente/index.html
@@ -11,6 +11,7 @@
         <li><a href="Tema1/index.html">Tema 1</a></li>
         <li><a href="Tema2/index.html">Tema 2</a></li>
         <li><a href="Tema3/index.html">Tema 3</a></li>
+        <li><a href="Tema4/index.html">Tema 4</a></li>
         <li><a href="Tema5/index.html">Tema 5</a></li>
     </ul>
 </body>
