--- a/DesarrolloWebCliente/Tema4/T4_R2/index.html
+++ b/DesarrolloWebCliente/Tema4/T4_R2/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="T4_R1/index.html">Relación 1</a></li>
-        <li><a href="T4_R2/index.html"> Relación 2</a></li>
-        <li><a href="T4_R3/Ejercicio1.html">Relación 3(solo es un ejercicio)</a></li>
-        <li><a href="#">Relación 4</a></li>
+        <li><a href="Ejercicio1A.html">Ejercicio 1A</a></li>
+        <li><a href="Ejercicio1B.html">Ejercicio 1B</a></li>
+        <li><a href="Ejercicio2.html">Ejercicio 2</a></li>
     </ul>
 </body>
 </html>
