--- a/DesarrolloWebCliente/Tema4/T4_R3/Ejercicio1.html
+++ b/DesarrolloWebCliente/Tema4/T4_R3/Ejercicio1.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Guessing Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Ejercicio1</title>
 </head>
 
 <body>
