--- a/DisInterfacesWeb/DiseñoPropio_AlejandroPoloBarranco/index.html
+++ b/DisInterfacesWeb/DiseñoPropio_AlejandroPoloBarranco/index.html
@@ -1,52 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Diseño Propio</title>
+    <title>Ejercicio Personalizado</title>
 </head>
+
 <body>
-    <input type="radio" name="perspective" id="threeD" checked>
-<input type="radio" name="perspective" id="isometric">
-<input type="radio" name="perspective" id="flat">
-
-<div class="wrapper">
-  <input type="checkbox" name="play" id="play">
-
-  <label for="play" class="playBtn"></label>
-  <div class="scene">
-    <div class="cube">
-      <div class="wall front"></div>
-      <div class="wall back"></div>
-      <div class="wall left"></div>
-      <div class="wall right"></div>
-      <div class="wall top"></div>
-      <div class="wall bottom"></div>
-    </div>
-  </div>
-</div>
-
-<nav class="perspectives">
-
-  <label class="threeBtn" for="threeD">
-    <svg class="threedee" viewBox="0 0 18 18" fill="none">
-      <path d="m1,1 v16 h16 V1 z m0,0 4,4 v8 h8 V5 H5 m8,0 4,-4 m0,16 -4,-4 m-8,0 -4,4"></path>
-    </svg>
-  </label>
-
-  <label class="isoBtn" for="isometric">
-    <svg class="iso" viewBox="0 0 20 20" fill="none">
-      <path d="m1.33,5.5 v9 l 8.66,5 8.66,-5 v-9 l -8.66,-5 -8.66,5 z m0,0 8.66,5 8.66,-5 m -8.66,5 v9"></path>
-    </svg>
-  </label>
-
-  <label class="flatBtn" for="flat">
-    <svg class="threedee" viewBox="0 0 18 18" fill="none">
-      <path d="m1,1 v16 h16 V1 z"></path>
-    </svg>
-  </label>
+    <main>
+        <h2>Ejercicio Personalizado Alejandro Polo Barranco</h2>
+        <section class="galeria">
+            <div class="imagen">
+                <img src="./assets/imagen1.jpg" alt="Imagen 1">
+                <div class="oculto">Imagen 1</div>
+            </div>
+            <div class="imagen">
+                <img src="./assets/imagen2.jpg" alt="Imagen 2">
+                <div class="oculto">Imagen 2</div>
+            </div>
+            <div class="imagen">
+                <img src="./assets/imagen3.jpg" alt="Imagen 3">
+                <div class="oculto">Imagen 3</div>
+            </div>
+            <div class="imagen">
+                <img src="./assets/imagen4.jpg" alt="Imagen 4">
+                <div class="oculto">Imagen 4</div>
+            </div>
+            <div class="imagen">
+                <img src="./assets/imagen5.jpg" alt="Imagen 5">
+                <div class="oculto">Imagen 5</div>
+            </div>
+            <div class="imagen">
+                <img src="./assets/imagen6.jpg" alt="Imagen 6">
+                <div class="oculto">Imagen 6</div>
+            </div>
+        </section>
+    </main>
 </body>
-</html>
 
-<!-- Perspective si -->
+</html>
