--- a/DisInterfacesWeb/MenuHamburgesa/index.html
+++ b/DisInterfacesWeb/MenuHamburgesa/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class="top">
-            <ul>
-                <li><img src="menu.svg" alt="menu"></li>
-            </ul>
-        </nav>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle">
+                <img src="menu.svg" alt="menu">
+            </label>
         <nav class="menu-lateral">
         <ul>
             <li>Inicio</li>
@@ -22,6 +22,7 @@
             <li>Contacto</li>
             <li>Blog</li>
         </ul>
+        </nav>
         </nav>
     </header>
 </body>
