--- a/DesarrolloWebCliente/Tema4/index.html
+++ b/DesarrolloWebCliente/Tema4/index.html
@@ -12,6 +12,7 @@
         <li><a href="T4_R2/index.html"> Relación 2</a></li>
         <li><a href="T4_R3/Ejercicio1.html">Relación 3(solo es un ejercicio)</a></li>
         <li><a href="T4_R4/index.html">Relación 4</a></li>
+        <li><a href="T4_R6/index.html">Relación 6</a></li>
     </ul>
 </body>
 </html>
