--- a/DisInterfacesWeb/index.html
+++ b/DisInterfacesWeb/index.html
@@ -11,6 +11,7 @@
         <li><a href="CSS/Ejercicios/index.html">Ejercicios con CSS</a></li>
         <li><a href="FLEXBOX/index.html">Ejercicios con Flexbox</a></li>
         <li><a href="GRIDLAYOUT/index.html">Ejercicios con Grid</a></li>
+        <li><a href="FLEXBOX/ProyectoFlexboxPersonal_AlejandroPoloBarranco/index.html">Proyecto Flexbox Personal</a></li>
         <li><a href="DiseñoPropio_AlejandroPoloBarranco/index.html">Ejercicio Diseño Propio</a></li>
     </ul>
 </body>
