--- a/DesarrolloWebCliente/Ejemplos/Tema6/pruebajson.html
+++ b/DesarrolloWebCliente/Ejemplos/Tema6/pruebajson.html
@@ -51,9 +51,15 @@
                 crearCards(json)
             }
         )
-
+    }
+    function getFetchV4(){
+        fetch('http://localhost:3000/user')
+            .then(res=>res.json())  
+            .then(json=>console.log(json)
+        )
     }
     getFetchV3()
+    getFetchV4()
     </script>
 </body>
 </html>
